FD-34611: Fix agents search icon visibility (#5469)
* FD-34611: Fix action button loading problem through agents search


* FD-34611: fix agents search bar icon

--- a/public/src/page/_customer.scss
+++ b/public/src/page/_customer.scss
@@ -966,4 +966,5 @@ ul.user_list{
 	font-size: 15px;
 	@include margin-left(12px);
 	top: 26px;
+	z-index: 99;
 }
